SideBar display on mobile fixed

--- a/src/components/global-components/side-bar/sideBar.scss
+++ b/src/components/global-components/side-bar/sideBar.scss
@@ -24,6 +24,7 @@
         bottom: 0;
         width: 100%;
         height: calc(100vh - 50px);
+        height: calc(var(--height) - 50px);
         overflow-y: scroll;
         z-index: 100;
         transition: all 0s;
@@ -58,7 +59,7 @@
         .childrenWrapper {
             background: #fff;
             z-index: 101;
-            max-height: calc(100vh - 50px);
+            max-height: 100%;
             transition: all .2s ease-out;
             transform: translate(-100vw);
         }
